Compile with spark-2.4 and run with spark-3.0 (#1233)